# cpphttp

./: .gitignore  CMakeLists.txt  Dockerfile.dev  LICENSE  README.md  build.sh  docker-compose.yml
example/: CMakeLists.txt  README.md  simple_server.cpp
src/: cpphttp.h  request.cpp  request.h  sqrt.cpp
src/internal/: asio.h  connection.cpp  connection.h
src/internal/connection/: connection.h  connection_functions.cpp  connection_functions.h  match_end_of_header.h
src/internal/container/: ts_fifo.h
src/internal/public_folder/: public_file.cpp  public_file.h  public_folder.cpp  public_folder.h
src/internal/tools/: extended_ascii_table.cpp  extended_ascii_table.h  params.cpp  params.h  string.cpp  string.h
src/request/: body.cpp  body.h  header.cpp  header.h  method.h  request.cpp  request.h  version.h
src/response/: header.cpp  header.h  response.cpp  response.h  status.h
src/server/: router.cpp  router.h  server.cpp  server.h
src/tools/: string.cpp  string.h
tests/: header_test.cpp  request_test.cpp  sqrt_test.cpp
tests/benchmark/: CMakeLists.txt  README.md  benchmark.sh  simple_server.cpp
tests/common/: curl.cpp  curl.h  request_matcher.cpp  requests.cpp  requests.h
tests/common/matchers/: request_matcher.h
tests/common/mocks/: connection_functions_mock.cpp  connection_functions_mock.h  router_mock.cpp  socket_mock.cpp  socket_mock.h
tests/data/: get_request.txt  incomplete_post_request.txt  post_json_request.txt  post_request.txt  post_request_incorrect_length.txt  two_post_requests.txt
tests/data/body/: get_request.txt
tests/data/headers/: get_request_with_param2.txt  post_request.txt  post_request_incorrect_length.txt  post_request_with_big_body.txt
tests/internal/: connection_test.cpp
tests/internal/connection/: connection_test.cpp  match_end_of_header_test.cpp
tests/internal/container/: ts_fifo_test.cpp
tests/projects/: CMakeLists.txt  simple_server.cpp
tests/request/: body_test.cpp  header_test.cpp  request_test.cpp
tests/server/: connection_test.cpp
tests/test_project/: simple_server.cpp
tests/tools/: data_reader.cpp
tests/unit/common/: curl.cpp  curl.h  requests.cpp  requests.h
tests/unit/common/matchers/: request_matcher.cpp  request_matcher.h
tests/unit/common/mocks/: connection_functions_mock.cpp  connection_functions_mock.h  router_mock.h  socket_mock.cpp
tests/unit/common/tools/: data_reader.cpp  data_reader.h
tests/unit/data/: read_test.txt
tests/unit/data/body/: post_request.txt  post_request_with_extended_ASCII.txt
tests/unit/data/headers/: get_request_with_ASCII_param.txt  get_request_with_param.txt
tests/unit/data/static_files/: test.tif
tests/unit/data/static_files/applications/: test.json
tests/unit/data/static_files/images/: test.svgz
tests/unit/data/static_files/text/: test.css  test.csv  test.unknown  test.unknown2
tests/unit/unit_tests/internal/connection/: connection_test.cpp  match_end_of_header_test.cpp
tests/unit/unit_tests/internal/connection/mocks/: connection_functions_mock.cpp  connection_functions_mock.h  public_folder_mock.cpp  public_folder_mock.h  router_mock.cpp  socket_mock.h
tests/unit/unit_tests/internal/public_folder/: public_file_test.cpp  public_folder_test.cpp
tests/unit/unit_tests/internal/tools/: strings_test.cpp
tests/unit/unit_tests/request/: body_test.cpp  header_test.cpp  request_test.cpp
tests/unit/unit_tests/response/: header_test.cpp  response_test.cpp
tests/unit/unit_tests/server/: router_test.cpp  server_test.cpp
tests/unit_tests/internal/connection/: connection_test.cpp
tests/unit_tests/internal/tools/: params_test.cpp
tests/unit_tests/request/: body_test.cpp  header_test.cpp  request_test.cpp
tests/unit_tests/response/: header_test.cpp  response_test.cpp
tests/unit_tests/server/: router_test.cpp  server_test.cpp
